--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9283,7 +9283,7 @@
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_002.cshtml" />
     <Content Include="Areas\Caja\Views\CajaMovimientoIngreso\_CmbPersona_MovimientoIngreso.cshtml" />
     <Content Include="Areas\Caja\Views\CajaMovimientoEgreso\_CmbPersona_MovimientoEgreso.cshtml" />
-    <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Index.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Index_Nuevo.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Nuevo.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Modificar.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Anular.cshtml" />
@@ -10159,6 +10159,11 @@
     <Content Include="Areas\CuentasPorPagar\Views\Deudas\_GridViewPartial_ing_inv_os_det.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\Deudas\_GridViewPartial_ing_inv_os_x_ingresar.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\Retencion\ComprasSinRetencion.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Index.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\_GridViewPartial_cobranza_sinretencion.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\CobranzaRetenciones\_GridViewPartial_cobranza_sinret.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\CobranzaRetenciones\CobrosSinRetencion.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\CobranzaRetenciones\Anular.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
