--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -155,6 +155,9 @@
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_tipo_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_x_CtaCble_Info.cs" />
+    <Compile Include="CuentasPorPagar\cp_ConciliacionAnticipoDetAnt_Info.cs" />
+    <Compile Include="CuentasPorPagar\cp_ConciliacionAnticipoDetCXP_Info.cs" />
+    <Compile Include="CuentasPorPagar\cp_conciliacionAnticipo_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_nota_DebCre_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_orden_giro_det_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_orden_giro_det_ing_x_oc_Info.cs" />
