--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -129,6 +129,9 @@
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_tipo_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_x_CtaCble_Bus.cs" />
+    <Compile Include="CuentasPorPagar\cp_ConciliacionAnticipoDetAnt_Bus.cs" />
+    <Compile Include="CuentasPorPagar\cp_ConciliacionAnticipoDetCXP_Bus.cs" />
+    <Compile Include="CuentasPorPagar\cp_ConciliacionAnticipo_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_nota_DebCre_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_orden_giro_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_orden_giro_det_Bus.cs" />
