--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -2111,6 +2111,9 @@
     <Compile Include="vwcp_ConciliacionAnticipo.cs">
       <DependentUpon>Model_cuentas_por_pagar.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwcp_ConciliacionAnticipoDetAnt_x_cruzar.cs">
+      <DependentUpon>Model_cuentas_por_pagar.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwcp_conciliacion_Caja_det.cs">
       <DependentUpon>Model_caja.tt</DependentUpon>
     </Compile>
