--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -726,11 +726,17 @@
     <Compile Include="Reportes\Contabilidad\CONTA_003_ER_Rpt.Designer.cs">
       <DependentUpon>CONTA_003_ER_Rpt.cs</DependentUpon>
     </Compile>
-    <Compile Include="Reportes\Contabilidad\CONTA_004_Rpt.cs">
+    <Compile Include="Reportes\Contabilidad\CONTA_004_BG_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Reportes\Contabilidad\CONTA_004_Rpt.Designer.cs">
-      <DependentUpon>CONTA_004_Rpt.cs</DependentUpon>
+    <Compile Include="Reportes\Contabilidad\CONTA_004_BG_Rpt.Designer.cs">
+      <DependentUpon>CONTA_004_BG_Rpt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Reportes\Contabilidad\CONTA_004_ER_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Contabilidad\CONTA_004_ER_Rpt.Designer.cs">
+      <DependentUpon>CONTA_004_ER_Rpt.cs</DependentUpon>
     </Compile>
     <Compile Include="Reportes\Contabilidad\CONTA_005_Rpt.cs">
       <SubType>Component</SubType>
@@ -10183,6 +10189,8 @@
     <Content Include="Areas\CuentasPorPagar\Views\ConciliacionAnticipoProveedor\_GridViewPartial_ConciliacionAnticipo_Fact_x_Cruzar.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\ConciliacionAnticipoProveedor\Modificar.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\ConciliacionAnticipoProveedor\Anular.cshtml" />
+    <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_006.cshtml" />
+    <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_004.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
@@ -10410,8 +10418,11 @@
     <EmbeddedResource Include="Reportes\Contabilidad\CONTA_003_ER_Rpt.resx">
       <DependentUpon>CONTA_003_ER_Rpt.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Reportes\Contabilidad\CONTA_004_Rpt.resx">
-      <DependentUpon>CONTA_004_Rpt.cs</DependentUpon>
+    <EmbeddedResource Include="Reportes\Contabilidad\CONTA_004_BG_Rpt.resx">
+      <DependentUpon>CONTA_004_BG_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Contabilidad\CONTA_004_ER_Rpt.resx">
+      <DependentUpon>CONTA_004_ER_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Contabilidad\CONTA_005_Rpt.resx">
       <DependentUpon>CONTA_005_Rpt.cs</DependentUpon>
