--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -302,6 +302,7 @@
     <Compile Include="Reportes\Compra\COMP_001_Bus.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_002_Bus.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_003_balances_Bus.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_004_Bus.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_005_Bus.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_006_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_Bus.cs" />
