--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Contabilidad\ATS\ventaEst.cs" />
     <Compile Include="Contabilidad\ct_anio_fiscal_Info.cs" />
     <Compile Include="Contabilidad\ct_anio_fiscal_x_cuenta_utilidad_Info.cs" />
+    <Compile Include="Contabilidad\ct_anio_fiscal_x_tb_sucursal_Info.cs" />
     <Compile Include="Contabilidad\ct_cbtecble_det_Info.cs" />
     <Compile Include="Contabilidad\ct_cbtecble_Info.cs" />
     <Compile Include="Contabilidad\ct_cbtecble_Plantilla_det_Info.cs" />
