--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10158,6 +10158,8 @@
     <Content Include="Areas\Contabilidad\Views\CierreAnual\Anular.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\TipoOrdenPago\_CmbCuenta_Tipo.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\TipoOrdenPago\_CmbCuenta_credito_Tipo.cshtml" />
+    <Content Include="Areas\Compras\Views\OrdenCompraLocal\_CmbCentroCosto_Compras.cshtml" />
+    <Content Include="Areas\Compras\Views\OrdenServicio\_CmbCentroCosto_OS.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
