--- a/ERP/Core.Erp.Web/Web.config
+++ b/ERP/Core.Erp.Web/Web.config
@@ -187,7 +187,7 @@
     </compilers>
   </system.codedom>
   <devExpress>
-    <themes enableThemesAssembly="true" theme="MaterialCompact" customThemeAssemblies="" baseColor="#2E75BB" />
+    <themes enableThemesAssembly="true" theme="MaterialCompact" customThemeAssemblies="" baseColor="#2E75BB" font="11px 'Segoe UI', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif" />
     <compression enableHtmlCompression="false" enableCallbackCompression="true" enableResourceCompression="true" enableResourceMerging="true" />
     <settings rightToLeft="false" checkReferencesToExternalScripts="true" doctypeMode="Html5" accessibilityCompliant="false" />
     <errors callbackErrorRedirectUrl="" />
