--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10163,6 +10163,7 @@
     <Content Include="Areas\Inventario\Views\IngresoInventario\_CmbCentroCosto_Inv_Ing.cshtml" />
     <Content Include="Areas\Inventario\Views\EgresoInventario\_CmbCentroCosto_Inv_Eg.cshtml" />
     <Content Include="Areas\Inventario\Views\IngresoInventarioOrdenCompra\_CmbCentroCosto_Inv_Ing_OC.cshtml" />
+    <Content Include="Areas\Inventario\Views\EgresoInventario\_CmbMotivoInven.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
