--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9263,6 +9263,7 @@
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_002.cshtml" />
     <Content Include="Areas\Caja\Views\CajaMovimientoIngreso\_CmbPersona_MovimientoIngreso.cshtml" />
     <Content Include="Areas\Caja\Views\CajaMovimientoEgreso\_CmbPersona_MovimientoEgreso.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Index_Nuevo.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Nuevo.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Modificar.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Anular.cshtml" />
@@ -10133,6 +10134,7 @@
     <Content Include="Areas\CuentasPorPagar\Views\Deudas\_GridViewPartial_ing_inv_os_x_ingresar.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\Retencion\ComprasSinRetencion.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\Index.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\Cobranza\_GridViewPartial_cobranza_sinretencion.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\CobranzaRetenciones\_GridViewPartial_cobranza_sinret.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\CobranzaRetenciones\CobrosSinRetencion.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\CobranzaRetenciones\Anular.cshtml" />
@@ -10165,6 +10167,9 @@
     <Content Include="Areas\Facturacion\Views\GuiaRemision\_GridViewPartial_PGuia_det.cshtml" />
     <Content Include="Areas\Facturacion\Views\GuiaRemision\_CmbCentroCosto_Guia.cshtml" />
     <Content Include="Areas\Facturacion\Views\Proforma\_CmbCentroCosto_Proforma.cshtml" />
+    <Content Include="Areas\Facturacion\Views\Factura\_CmbCentroCosto_Factura.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeCreditoFacturacion\_CmbCentroCosto_NC.cshtml" />
+    <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\_CmbCentroCosto_ND.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
