--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1285,6 +1285,7 @@
     <Compile Include="Reportes\Inventario\INV_001_Data.cs" />
     <Compile Include="Reportes\Inventario\INV_004_Data.cs" />
     <Compile Include="Reportes\Inventario\INV_008_Data.cs" />
+    <Compile Include="Reportes\Inventario\INV_009_Data.cs" />
     <Compile Include="Reportes\Inventario\INV_011_Data.cs" />
     <Compile Include="Reportes\Inventario\INV_002_Data.cs" />
     <Compile Include="Reportes\Inventario\INV_003_Data.cs" />
@@ -1765,6 +1766,9 @@
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="SPINV_005_Result.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SPINV_009_Result.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="SPINV_010_Result.cs">
@@ -2368,6 +2372,9 @@
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="VWINV_011.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VWINV_012.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="VWINV_014.cs">
