--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1292,6 +1292,7 @@
     <Compile Include="Reportes\Inventario\INV_005_Data.cs" />
     <Compile Include="Reportes\Inventario\INV_007_Data.cs" />
     <Compile Include="Reportes\Inventario\INV_010_Data.cs" />
+    <Compile Include="Reportes\Inventario\INV_012_Data.cs" />
     <Compile Include="Reportes\Inventario\INV_013_Data.cs" />
     <Compile Include="Reportes\Inventario\INV_014_Data.cs" />
     <Compile Include="Reportes\Inventario\INV_015_Data.cs" />
