--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -396,6 +396,7 @@
     <Compile Include="Reportes\Inventario\INV_005_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_007_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_010_Info.cs" />
+    <Compile Include="Reportes\Inventario\INV_012_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_013_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_014_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_015_Info.cs" />
