--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10187,6 +10187,7 @@
     <Content Include="Areas\Facturacion\Views\NotaDeDebitoFacturacion\_CmbCentroCosto_ND.cshtml" />
     <Content Include="Areas\Contabilidad\Views\ComprobanteContable\_CmbCentroCosto_Conta.cshtml" />
     <Content Include="Areas\Contabilidad\Views\ComprobanteContable\_CmbPuntoCargo.cshtml" />
+    <Content Include="Areas\Contabilidad\Views\AnioFiscal\_CmbCuenta_Anio_Cierre.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
